completed hard mode

--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
             <h1 class="color-picked">test</h1>
             <p class="message">WHAT'S THE COLOR?</p>
             <div class="card-container">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="row">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </div>
+                <div class="row">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div> 
+                </div>
             </div>
             <button class="reset">
                 <i class="fa fa-retweet" aria-hidden="true"></i>
