add nightmare mode

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </nav>
         <main>
             <h1 class="color-picked">test</h1>
-            <p class="message">WHAT'S THE COLOR?</p>
+            <p id='message' class="message">WHAT'S THE COLOR?</p>
+            <p id='countdown' class="message countdown"></p>
             <div class="card-container">
                 <div class="row">
                     <div class="card"></div>
